# dotenv-stripout

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
dotenv_stripout/: __init__.py  __main__.py  cli.py  git.py  install.py  stripout.py  utils.py
test/: test_path_matching.py  test_stripping.py
test/data/: .env
test/data/subdir/: .env
