[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "dotenv_stripout"
dist-name = "dotenv-stripout"
author = "Harrison Pim"
author-email = "hello@harrisonpim.com"
home-page = "https://github.com/harrisonpim/dotenv-stripout"
description-file = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.6"
requires = [
    "typer>=0.3.2"
]

[tool.flit.metadata.requires-extra]
dev = [
    "black>=19.10b0",
    "flake8>=3.8.1",
    "isort>=4.3.21",
    "pytest>=6.2.4",
]

[tool.flit.scripts]
dotenv-stripout = "dotenv_stripout.cli:cli"
